--- a/client/src/components/nav/nav.module.scss
+++ b/client/src/components/nav/nav.module.scss
@@ -7,7 +7,7 @@
   padding: 0;
 
   ul {
-    background: #24305e;
+    background: #f8e9a1;
     margin: 0;
     padding-left: 0;
     text-decoration: none;
@@ -15,7 +15,7 @@
 
   li {
     color: black;
-    background: #24305e;
+    background: #f8e9a1;
     display: block;
     float: left;
     padding: 1rem;
