--- a/client/src/components/home/home.module.scss
+++ b/client/src/components/home/home.module.scss
@@ -1,11 +1,24 @@
+* {
+  font-family: sans-serif;
+}
+
+body {
+  width: 100%;
+}
+
 .contents {
   list-style-type: none;
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  flex-direction: column;
+  width: 40%;
+  height: 100%;
   padding: 0;
   flex-wrap: wrap;
   justify-content: center;
+  position: relative;
+  left: 58%;
+
+  border: silver solid 1px;
 }
 
 .content {
@@ -18,5 +31,12 @@
   justify-content: center space-between;
   align-items: center;
   border-radius: 2%;
-  max-width: 30%;
+  max-width: 100%;
+  max-height: 100%;
 }
+
+// .container {
+//   height: px;
+//   background: #e8a87c;
+//   width: 100%;
+// }
