--- a/client/src/components/home/home.module.scss
+++ b/client/src/components/home/home.module.scss
@@ -9,34 +9,27 @@ body {
 .contents {
   list-style-type: none;
   display: flex;
-  flex-direction: column;
-  width: 40%;
+  flex-direction: row;
+  width: 100%;
   height: 100%;
   padding: 0;
   flex-wrap: wrap;
   justify-content: center;
-  position: relative;
-  left: 58%;
 
-  border: silver solid 1px;
+  // border: silver solid 1px;
 }
 
 .content {
-  color: #000000;
-  text-decoration: none;
+  border: #000000 1px;
+  align-items: center;
+  max-width: 22%;
+
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center space-between;
-  align-items: center;
-  border-radius: 2%;
-  max-width: 100%;
-  max-height: 100%;
+  padding: 0.5rem;
 }
 
-// .container {
-//   height: px;
-//   background: #e8a87c;
-//   width: 100%;
-// }
+.image {
+  width: 100%;
+  height: 550px;
+}
