--- a/client/src/components/home/home.module.scss
+++ b/client/src/components/home/home.module.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -15,6 +15,8 @@ body {
   padding: 0;
   flex-wrap: wrap;
   justify-content: center;
+  position: relative;
+  top: -150px;
 
   // border: silver solid 1px;
 }
@@ -23,13 +25,36 @@ body {
   border: #000000 1px;
   align-items: center;
   max-width: 22%;
-
+  box-shadow: 1px 1px 1px 1px;
   width: 100%;
   height: 100%;
-  padding: 0.5rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.content:hover {
+  background: #d8c3a5;
 }
 
 .image {
   width: 100%;
-  height: 550px;
+  height: 650px;
+}
+
+.title {
+  position: relative;
+  text-align: center;
+  top: -600px;
+  font-size: 50px;
+}
+
+.epigraph {
+  position: relative;
+  top: -590px;
+  font-size: 18px;
+}
+
+.author {
+  position: relative;
+  top: -580px;
 }
