--- a/client/src/components/nav/nav.module.scss
+++ b/client/src/components/nav/nav.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 0;
   ul {
-    background: #d8c3a5;
+    background: #daad86;
     margin: 0;
     padding-left: 0;
     text-decoration: none;
@@ -14,7 +14,7 @@
 
   li {
     color: black;
-    background: #d8c3a5;
+    background: #daad86;
     display: block;
     float: left;
     padding: 1rem;
